# fixinst

fixinst/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in  requirements.sh
fixinst/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
fixinst/src/: Dialogs.cc  Dialogs.h  File.cc  File.h  GCopy.cc  GCopy.h  Makefile.am  Makefile.in  User.cc  User.h  XML.cc  XML.h  main.cc  main.h
